lib/oopm/parsing/string_literal.treetop
grammar StringLiteral
  rule string_literal
    (double_quoted / single_quoted )
  end

  rule single_quoted
    ('\'' (('\\\'') / (!'\'' .))* '\'')
  end
  
  rule double_quoted
    ('"' (('\"') / (!'"' .))* '"')
  end
end
